--- a/src/components/Home/Hero/hero.module.scss
+++ b/src/components/Home/Hero/hero.module.scss
@@ -5,6 +5,7 @@
 .hero {
   position: relative;
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   // justify-content: center;
